# rust-apt

./: .clang-format  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md  build.rs  compile_commands.json  dev.py  justfile  netlify.toml  rustfmt.toml
apt-pkg-c/: acquire.h  apt-pkg.cc  apt-pkg.h  cache.cc  cache.h  configuration.cc  configuration.h  cxx-typing.h  defines.h  depcache.cc  depcache.h  error.cc  error.h  package.cc  package.h  pkgmanager.cc  pkgmanager.h  progress.cc  progress.h  records.cc  records.h  resolver.cc  resolver.h  types.h  util.cc  util.h
src/: acquire.rs  cache.rs  config.rs  depcache.rs  error.rs  lib.rs  macros.rs  package.rs  pkgmanager.rs  progress.rs  raw.rs  records.rs  resolver.rs  tagfile.rs  util.rs
src/iterators/: dependency.rs  files.rs  mod.rs  package.rs  provider.rs  serde.rs  version.rs
src/raw/: cache.rs  config.rs  depcache.rs  error.rs  mod.rs  package.rs  pkgmanager.rs  progress.rs  records.rs  util.rs
tests/: cache.rs  config.rs  depcache.rs  records.rs  root.rs  sort.rs  tagfile.rs  tests.rs  util.rs
tests/files/cache/apt/DEBIAN/: control
tests/files/cache/broken-or-dep_0.0.1/DEBIAN/: control
tests/files/cache/dep-pkg1_0.0.1/DEBIAN/: control
tests/files/cache/dep-pkg1_0.0.2/DEBIAN/: control
tests/files/cache/dep-pkg2_0.0.1/DEBIAN/: control
tests/files/cache/no-description_0.0.1/DEBIAN/: control
tests/files/tagfile/: correct.control
