[package]
authors = [
	"Blake Lee <blake@volian.org>",
	"Hunter Wittenborn <hunter@hunterwittenborn.com>"
]
categories = [
	"api-bindings",
	"os",
]
description = "Bindings for libapt-pkg"
license = "GPL-3.0-or-later"
name = "rust-apt"
readme = "README.md"
repository = "https://gitlab.com/volian/rust-apt"
version = "0.5.0"

edition = "2021"

[dependencies]
cxx = "1.0"
once_cell = "1.10.0"
termsize = "0.1.6"

[build-dependencies]
cxx-build = "1.0"
