[package]
authors = [
	"Blake Lee <blake@volian.org>",
	"Hunter Wittenborn <hunter@hunterwittenborn.com>"
]
categories = [
	"api-bindings",
	"os",
]
description = "Bindings for libapt-pkg"
license = "GPL-3.0-or-later"
name = "rust-apt"
readme = "README.md"
repository = "https://gitlab.com/volian/rust-apt"
version = "0.7.0"

edition = "2021"

[dependencies]
cxx = "1.0"
terminal_size = "0.3.0"

[build-dependencies]
cxx-build = "1.0"
